--- a/drupal/sites/all/themes/sronline/scss/_blocks.scss
+++ b/drupal/sites/all/themes/sronline/scss/_blocks.scss
@@ -159,7 +159,7 @@
   }
   #edit-actions {
     float: left;
-    margin-left: 10px;
+    /*margin-left: 10px;*/
   }
 }
 
