--- a/drupal/sites/all/themes/sronline/scss/_navigation.scss
+++ b/drupal/sites/all/themes/sronline/scss/_navigation.scss
@@ -37,7 +37,7 @@
         text-transform: uppercase;
         font-size: 1.1em;
         color: #fff;
-        padding: 3px 5px;
+        padding: 3px 20px;
         margin: 9px 10px;
 
         &.active, &:hover {
